# volunteer_tg_bot

./: .gitignore  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 2023_10_14_2217-29bc271ae35d_initial.py  2023_10_17_0445-d8e871b0b4aa_initial.py  2023_10_18_0242-b802cc4fa11d_added_rules_table.py  2023_10_18_0249-0acd1dfc89fb_username_is_nullable_in_users.py  2023_10_22_0345-86f82d60744a_added_rule_number_column.py  2024_01_22_0247-2e5359d8cb3b_.py  2024_03_28_1759-9b82402ec2c6_added_notifications_table.py
src/: config.py  main.py
src/database/: database.py  exceptions.py
src/database/models/: __init__.py  base.py  notifications.py  roles.py  rules.py  shift.py  shift_logs.py  users.py
src/filters/: __init__.py  rule_number.py  text.py
src/keyboards/: inline.py  reply.py
src/keyboards/inline/: notifications.py  rules.py  shifts.py  users.py
src/keyboards/reply/: admin.py  main.py  reset.py
src/repositories/: __init__.py  notifications.py  roles.py  rules.py  shift_logs.py  shifts.py  users.py
src/routers/: __init__.py  admin.py  echo.py  event.py  help.py  info.py  shift.py  start.py  utils.py
src/routers/admin/: __init__.py  admin_keyboard.py  base.py  manage_notifications.py  manage_rules.py  (+3 more)
src/schemas/: base.py  notifications.py  role.py  rules.py  shift.py  sort.py  user.py
src/services/: notifications.py  rules.py  shifts.py  users.py
src/utils/: dependencies.py  middlewares.py  notifications_enum.py  pluralization.py  repositories.py  shift_enum.py  states.py  stickers_enum.py  texts.py  unitofwork.py
