[tool.poetry]
name = "volunteer-tg-bot"
version = "0.2.0"
description = ""
authors = ["kreyNie <kreynie@vk.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
pydantic-settings = "^2.0.3"
aiosqlite = "^0.19.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.22" }
alembic = "^1.12.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
